added start of keypress handler... need to find a way to click on to iframe/canvas dom

--- a/ChromeExtensionSourceCode/public/manifest.json
+++ b/ChromeExtensionSourceCode/public/manifest.json
@@ -5,6 +5,10 @@
     "action": {
         "default_popup": "index.html"
     },
+    "content-scripts": [{
+        "world": "MAIN",
+        "js": ["document_change.js"]
+    }],
     "permissions": ["scripting"],
     "host_permissions":[
         "http://*/*",
